--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ wyndex-bundle = { git = "https://github.com/AbstractSDK/integration-bundles.git"
 abstract-dex-adapter = { git = "https://github.com/AbstractSDK/adapters.git", features = [
   "interface",
   "juno",
+  "testing"
 ] }
 croncat-app = { git = "https://github.com/CronCats/abstract-croncat-app.git", rev = "5077a7e", features = [
   "interface",
